--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,15 +7,15 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>{{ page.title }}</title>
 
-    {% if site.enforce_ssl %}
+    {% if jekyll.environment == "production" %}
     <!--
       redirect users to the https version of the website.
       but: only check when on the production domain, as set in _config.yml.
      -->
     <script type="text/javascript">
-      var enforce = "{{ site.enforce_ssl }}";
-      if ((enforce == window.location.host) && (window.location.protocol != "https:"))
-        window.location = window.location.toString().replace(/^http:/, "https:");
+      var enforce = "{{ site.github.host }}";
+      if ((enforce === window.location.host) && (window.location.protocol !== 'https:'))
+        window.location = window.location.toString().replace(/^http:/, 'https:');
     </script>
     {% endif %}
 
