update the twitter and metadata info

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
 
     <!-- Twitter and OpenGraph data
     ================================================== -->
-    <meta name="twitter:site" content="@18F">
-    <meta name="twitter:creator" content="@18F">
+    <meta name="twitter:site" content="{{ site.twitter.site }}">
+    <meta name="twitter:creator" content="{{ site.twitter.creator }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}" />
     <meta property="og:type" content="website" />
 
