--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,22 @@
 
+  <div class="container-fluid">
+
+    <div class="clearfix">
+      <h1>&nbsp;</h1>
+    </div>
+
+    <div class="jumbotron">
+      <p class="lead">
+        These metrics are to be used as a guide only,
+        when making decisions please always double check with other sources for verification.
+      </p>
+      <p>
+        <a class="btn btn-primary btn-lg" href="https://github.com/clarkbw/devtools-metrics" role="button">Source Code on Gitub</a>
+        <a class="btn btn-primary btn-lg pull-right" href="https://telemetry.mozilla.org" role="button">Mozilla Telemetry</a>
+      </p>
+    </div>
+  </div>
+
   <!-- <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
           integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
           crossorigin="anonymous"></script> -->
